[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/MidBattleWarp.gd" type="Script" id=1]
[ext_resource path="res://Scripts/BossFight.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Elements" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 40.0
margin_right = -21.0
margin_bottom = -510.0
custom_constants/separation = 50

[node name="Air" type="VBoxContainer" parent="Elements"]
margin_right = 24.0
margin_bottom = 50.0
custom_constants/separation = 10

[node name="Count" type="Label" parent="Elements/Air"]
margin_right = 24.0
margin_bottom = 14.0
text = "Air:"

[node name="Earth" type="VBoxContainer" parent="Elements"]
margin_left = 74.0
margin_right = 114.0
margin_bottom = 50.0
custom_constants/separation = 10

[node name="Count" type="Label" parent="Elements/Earth"]
margin_right = 40.0
margin_bottom = 14.0
text = "Earth:"

[node name="Fire" type="VBoxContainer" parent="Elements"]
margin_left = 164.0
margin_right = 194.0
margin_bottom = 50.0
custom_constants/separation = 10

[node name="Count" type="Label" parent="Elements/Fire"]
margin_right = 30.0
margin_bottom = 14.0
text = "Fire:"

[node name="Water" type="VBoxContainer" parent="Elements"]
margin_left = 244.0
margin_right = 288.0
margin_bottom = 50.0
custom_constants/separation = 10

[node name="Count" type="Label" parent="Elements/Water"]
margin_right = 44.0
margin_bottom = 14.0
text = "Water:"

[node name="Light" type="VBoxContainer" parent="Elements"]
margin_left = 338.0
margin_right = 376.0
margin_bottom = 50.0

[node name="Count" type="Label" parent="Elements/Light"]
margin_right = 38.0
margin_bottom = 14.0
text = "Light:"
align = 2

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 68.0187
margin_top = 120.123
margin_right = 919.019
margin_bottom = 472.123
alignment = 1

[node name="Label" type="Label" parent="Menu"]
margin_top = 145.0
margin_right = 851.0
margin_bottom = 159.0
align = 1

[node name="CombatRow" type="HBoxContainer" parent="Menu"]
margin_top = 163.0
margin_right = 851.0
margin_bottom = 183.0
alignment = 1

[node name="FailButton" type="Button" parent="Menu/CombatRow"]
margin_left = 130.0
margin_right = 310.0
margin_bottom = 20.0
rect_min_size = Vector2( 70, 20 )
text = "Block it with your hands!"

[node name="ElementButton" type="Button" parent="Menu/CombatRow"]
margin_left = 314.0
margin_right = 536.0
margin_bottom = 20.0
rect_min_size = Vector2( 70, 20 )
text = "Block it with a shield of water!"

[node name="LightButton" type="Button" parent="Menu/CombatRow"]
margin_left = 540.0
margin_right = 720.0
margin_bottom = 20.0
rect_min_size = Vector2( 70, 20 )
text = "Block it with your hands!"

[node name="Advance" type="Button" parent="Menu/CombatRow"]
visible = false
margin_left = 610.0
margin_right = 622.0
margin_bottom = 20.0

[node name="WarpRow" type="HBoxContainer" parent="Menu"]
margin_top = 187.0
margin_right = 851.0
margin_bottom = 207.0
alignment = 1

[node name="WarpButton" type="Button" parent="Menu/WarpRow"]
margin_left = 383.0
margin_right = 467.0
margin_bottom = 20.0
text = "Run Away!"
script = ExtResource( 1 )

[node name="LightHBox" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_top = 40.0
margin_right = 983.0
margin_bottom = 90.0
alignment = 2

[connection signal="pressed" from="Menu/CombatRow/FailButton" to="." method="_on_fail_button_pressed"]
[connection signal="pressed" from="Menu/CombatRow/ElementButton" to="." method="_on_element_button_pressed"]
[connection signal="pressed" from="Menu/CombatRow/LightButton" to="." method="_on_light_button_pressed"]
[connection signal="pressed" from="Menu/WarpRow/WarpButton" to="Menu/WarpRow/WarpButton" method="_on_warp_pressed"]
